# Movora

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  compose.yaml  install.sh
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 209e21bbb483_initial_schema.py  24ead41f23c1_series_metadata_fields.py  7199a3585194_series_format_duration_end_year.py  9101f7dcb25d_series_display_and_native_title.py  a1b2c3d4e5f6_episode_intro_outro.py  a6b7c8d9e0f1_task_attempts.py  a7b8c9d0e1f2_media_file_pix_fmt.py  b1c2d3e4f5a6_media_file_normalized_path.py  b2c3d4e5f6a7_user_preferred_language.py  b7c8d9e0f1a2_task_pid.py  b8c9d0e1f2a3_media_variant_codecs.py  c2d3e4f5a6b7_setting_table.py  c3d4e5f6a7b8_user_library_access.py  c6081e5efce7_activity_job_table.py  c8d9e0f1a2b3_recommendation.py  c9d0e1f2a3b4_task_prepare_variant.py  d0e1f2a3b4c5_metadata_i18n.py  d3e4f5a6b7c8_task_queue_table.py  d40a1ea5dde3_series_synopsis_score_genres_banner.py  d4e5f6a7b8c9_episode_intro_checked.py  d9e0f1a2b3c4_episode_end_number.py  e0f1a2b3c4d5_episode_thumbnail.py  e1f2a3b4c5d6_episode_detect_attempts.py  e4f5a6b7c8d9_tasks_for_scan_metadata_drop_job.py  e5f6a7b8c9d0_media_variant.py  f1a2b3c4d5e6_character.py  f5a6b7c8d9e0_media_file_original_deleted.py  f6a7b8c9d0e1_device.py
backend/movora/: __init__.py  access.py  artifacts.py  audio.py  auth.py  compat.py  config.py  device_planner.py  device_variants.py  domain.py  encoders.py  enrich.py  ffprobe.py  filesystem.py  home.py  interfaces.py  intro.py  normalization.py  normalize.py  parsing.py  recipes.py  sample_codecs.py  scanner.py  season_split.py  settings_store.py  streaming.py  thumbnails.py  watch.py
backend/movora/api/: app.py  auth_routes.py  capability_routes.py  deps.py  device_routes.py  routes.py  schemas.py
backend/movora/assets/capability_samples/: README.md  manifest.json  movora_demo_dts_51_mkv.mkv  movora_demo_eac3_51_mkv.mkv  movora_demo_h264_dts_mkv.mkv  movora_demo_h264_hi10p_1080p_mkv.mkv  movora_demo_h264_high_l41_720p_aac_mkv.mkv  movora_demo_h264_opus_mkv.mkv  movora_demo_h264_pcm_mkv.mkv  movora_demo_h264_ts.ts  movora_demo_h264_vorbis_mkv.mkv  movora_demo_hevc10_2160p_hdr10_mkv.mkv  movora_demo_hevc10_2160p_mkv.mkv  movora_demo_hevc10_720p_aac_mkv.mkv  movora_demo_subtitle_test.ass  movora_demo_subtitle_test.srt  movora_demo_subtitle_test.vtt  movora_demo_vp9_1080p.webm  movora_demo_xvid_480p.avi
backend/movora/db/: __init__.py  base.py  models.py
backend/movora/metadata/: __init__.py  anilist.py  fallback.py  jikan.py  registry.py  titles.py  tmdb.py
backend/movora/subtitles/: __init__.py  ass_model.py  ass_parser.py  clean_ass.py  encoding.py  features.py  labels.py  resolver.py  srt.py  style_classifier.py  tracks.py
backend/scripts/: ass_to_srt.py  benchmark_clean_ass.py  locate_style.py  sample_styles.py  stress_test.py
backend/tests/: conftest.py  test_api.py  test_api_routes.py  test_ass_parser.py  test_audio.py  test_auth.py  test_auth_api.py  test_capability_samples.py  test_clean_ass.py  test_compat.py  test_cors.py  test_db.py  test_delete_original.py  test_device_api.py  test_device_planner.py  test_device_profile.py  test_device_self_report.py  test_device_variants.py  test_encoders.py  test_enrich.py  test_ffprobe.py  test_filesystem.py  test_home.py  test_intro.py  test_labels.py  test_metadata.py  test_normalization.py  test_normalize.py  test_pairing.py  test_parsing.py  test_playback_status.py  test_queue.py  test_registry.py  test_resolver.py  test_scanner.py  test_search.py  test_season_split.py  test_settings.py  test_srt.py  test_streaming.py  (+8 more)
backend/tests/fixtures/: synthetic_basic.ass
docker/: entrypoint.sh
frontend/: .gitignore  README.md  index.html  (+6 more)
(+121 files in other folders)
