[project]
name = "movora"
version = "1.0.1"
description = "Lightweight self-hosted media server with ingest-time normalization and first-class anime support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "guessit>=3.8",
    "httpx>=0.27",
    "send2trash>=1.8",
    "numpy>=2.0",  # vectorised audio-fingerprint matching for intro/outro detection
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["movora"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["alembic", "movora/vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["movora", "tests"]
exclude = ["movora/vendor/"]
# Apply per-module `follow_imports = "skip"` to stub (.pyi) files too — needed to skip numpy's
# stubs below (mypy follows stubs regardless of follow_imports by default).
follow_imports_for_stubs = true

[[tool.mypy.overrides]]
module = ["guessit", "guessit.*", "send2trash"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["movora.vendor.*"]
follow_imports = "skip"

# numpy's published stubs use PEP 695 `type` statements (Python 3.12 syntax). Analysing them
# under our 3.10 target makes mypy fail ("Type statement is only supported in Python 3.12 and
# greater") whenever CI installs a newer numpy than the dev box. We don't type-check numpy's
# internals, so skip following into it — its symbols become Any.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = ["ignore:Using `httpx`"]
